  root of application or just under lib directory.
- The variable $suppressAuthTargetFillingOnCreate in params.php prevents to set the target field of authentication
  on carete operation.
- The dist-docs/generateminifyjshere.sh file is the shell script generating the minified js file on composer installed.
- [BUG FIX] The addCondition() api of INTERMediator class ignore conditions in some case (value: 0, or without value).
  This was over checking the object describing a condition, and modified to easier.
- [BUG FIX] The MediaAccess class with a context level authentication couldn't show images in some cases.
- [BUG FIX] The post-only form with multiple file pickers created multiple records.
  Fix it and every media set to the same record.

Ver.8 (July 22, 2021)
- [Important] If you see the message which tells the ServiceServer couldn't boot just after installation,
  the best practice is install the Node.js on your operating system.

- The password hash for authentication moves to SHA-256 based hash, and it has the interoperability with SHA-1 hash.
- The 'storing' key in 'authentication' key can have the value 'credential', and it stores critical information
  in the http-only cookie and any information about authentication can't read from JavaScript.
- The $migrateSHA1to2 variable can moved to SHA-256 hash from SHA-1 hash without changing the password.
- The length of the challenge doubled to 24 byte from 12.
- Check the DB schema for authentication in case of debug mode. It checks character length of fields.
- SAML is integrated with SimpleSAMLphp. The $isSAML variable in params.php has to be set true, also set $samlAuthSource,
  and setting information exists in sample/saml-config directory.
- If the variable $samlWithBuiltInAuth in params.php set true, the built-in authentication works first and moves to SAML.
- If the variable $samlAttrRules in params.php, it can customize to extract information from the SAML attributes.